# Open-League-Overlay

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  app_paths.cpp  app_settings.cpp  app_settings.h  champ_select.cpp  champion_catalog.cpp  champion_catalog.h  game_tui.h  item_catalog.h  lcu_client.h  main.cpp  overlay_data.h  overlay_main.cpp  performance_scorer.cpp  performance_scorer.h  performance_tracker.cpp  performance_tracker.h  settings.example.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: windows-build.yml
api/: api_caller.cpp  api_caller.h  json_parser.cpp
docs/: architecture.md  release-checklist.md
docs/screenshots/: README.md
include/: app_paths.h  app_settings.h  champ_select.h  match_history.h
include/api/: json_parser.h
resources/: open_league_overlay.rc  open_league_overlay_gui.rc
scripts/: build_release.cmd  build_release.ps1  package.ps1  package_release.cmd  package_release.ps1
src/: champ_select.cpp  game_tui.cpp  item_catalog.cpp  lcu_client.cpp  main.cpp  match_history.cpp  overlay_data.cpp  overlay_main.cpp
src/api/: api_caller.cpp  json_parser.cpp
